<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.about.AboutFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:id="@+id/college_image"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_college"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Green Enviroment"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:fontFamily="@string/bold"
            android:text="Branch"
            android:textColor="@color/textColor"
            android:textSize="@dimen/tittle_size" />
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:id="@+id/viewPager"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@string/bold"
                android:text="CSE"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="@dimen/tittle_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_cse"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <ImageView
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/cse"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@string/bold"
                android:text="ECE"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="@dimen/tittle_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_ece"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <ImageView
                android:id="@+id/ece"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/ece"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:fontFamily="@string/bold"
                android:text="Mechanical"
                android:textColor="@color/textColor"
                android:textSize="@dimen/tittle_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_mech"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <ImageView
                android:id="@+id/mechanical"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/mech"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@string/bold"
                android:text="BioTech"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="@dimen/tittle_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_biotech"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <ImageView
                android:id="@+id/biotech"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/biotech"/>

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>