<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:fontFamily="@string/bold"
                android:text="UIET KURUKSHETRA"
                android:textColor="@color/textColor"
                android:textSize="@dimen/tittle_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_college"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:background="@color/darkColor">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="36dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/text_margin"
                            android:fontFamily="@string/bold"
                            android:text="Departments"
                            android:textColor="#fff"
                            android:textSize="@dimen/tittle_size"/>


                          <com.google.android.material.card.MaterialCardView
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="16dp">

                              <LinearLayout
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:background="#fff"
                                  android:orientation="vertical">


                                  <TextView
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:text="Conputer Science"
                                      android:layout_marginHorizontal="@dimen/text_margin"
                                      android:layout_marginTop="@dimen/text_margin"
                                      android:textSize="@dimen/text_size"
                                      android:layout_margin="8dp"
                                      android:layout_gravity="center_horizontal"
                                      android:textColor="@color/textColor"
                                      android:fontFamily="@string/light"/>

                                  <View
                                      android:layout_width="match_parent"
                                      android:layout_height="1dp"
                                      android:background="@color/grey"/>

                                  <TextView
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:text="Electronics"
                                      android:layout_marginHorizontal="@dimen/text_margin"
                                      android:layout_marginTop="@dimen/text_margin"
                                      android:textSize="@dimen/text_size"
                                      android:layout_margin="8dp"
                                      android:layout_gravity="center_horizontal"
                                      android:textColor="@color/textColor"
                                      android:fontFamily="@string/light"/>

                                  <View
                                      android:layout_width="match_parent"
                                      android:layout_height="1dp"
                                      android:background="@color/grey"/>

                                  <TextView
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:text="BioTech"
                                      android:layout_marginHorizontal="@dimen/text_margin"
                                      android:layout_marginTop="@dimen/text_margin"
                                      android:textSize="@dimen/text_size"
                                      android:layout_margin="8dp"
                                      android:layout_gravity="center_horizontal"
                                      android:textColor="@color/textColor"
                                      android:fontFamily="@string/light"/>

                                  <View
                                      android:layout_width="match_parent"
                                      android:layout_height="1dp"
                                      android:background="@color/grey"/>

                                  <TextView
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:text="Mechanical"
                                      android:layout_marginHorizontal="@dimen/text_margin"
                                      android:layout_marginTop="@dimen/text_margin"
                                      android:textSize="@dimen/text_size"
                                      android:layout_margin="8dp"
                                      android:layout_gravity="center_horizontal"
                                      android:textColor="@color/textColor"
                                      android:fontFamily="@string/light"/>

                              </LinearLayout>

                          </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@string/bold"
                    android:text="Contact Details"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/tittle_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UIET"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kurukshetra University,Kurukshetra,Haryana"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/mapimg"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>